# trade

./: .env  .env.example  .env.local  .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/.workflows/: bandit.yml  black.yml  flake8.yml  mypy.yml
.github/workflows/: bandit.yml  flake8.yml
backend/: .gitignore
backend/app/: .gitignore  prestart.sh  pyproject.toml
config/: deployment.yml
frontend/: codegen.py  index.html  package-lock.json  package.json  postcss.config.js  vite.config.js
frontend/src/: App.jsx  main.jsx  user.js  utils.js
trade/: main.py
trade/app/: routes.py
trade/core/: config.py  deps.py  exceptions.py  httpclient.py  logger.py
trade/cron/: cleanup.py  compare.py  compare_binance.py  data.py  exchange_binance.py  exchange_mexc.py  exchange_okx.py  extract.py  fill.py  mail.py  order.py  pair.py  pair_okx.py  pairs.py  predict.py  run.py  run_binance.py  spot.py  spot_mexc.py  spot_okx.py  transfer.py  volatility.py
trade/crud/: __init__.py  base.py  crud_address.py  crud_customer.py  crud_exchange_binance.py  crud_exchange_mecx.py  crud_exchange_okx.py  crud_operation.py  crud_order.py  crud_pair.py  crud_transaction.py  crud_unavailable.py  crud_unavailable_binance.py  crud_volatility.py  crud_volatility_mecx.py  crud_volatility_okx.py
trade/db/: base.py  session.py  utcdatetime.py
trade/models/: address.py  customer.py  exchange_binance.py  exchange_mecx.py  exchange_okx.py  operation.py  order.py  pair.py  transaction.py  unavailable.py  unavailable_binance.py  volatility.py  (+2 more)
(+263 files in other folders)
