[tool.poetry]
name = "trade"
version = "0.1.1"
description = ""
authors = ["Dmytro Holub <dmitriy.golub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gevent = "^22.10.2"
anyio = "^3.7.0"
greenlet = "^2.0.2"
template = "^0.7.6"
asyncer = "^0.0.2"
typing-extensions = "^4.6.2"
typer = "^0.9.0"
fastapi = {extras = ["all"], version = "^0.98.0"}
motor = "^3.2.0"
sqlalchemy = "^2.0.19"
redis = "^5.0.0"
aiohttp = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
